make sure images on product display above details on iPhone 6 plus

--- a/src/scss/modules/_product-detail.scss
+++ b/src/scss/modules/_product-detail.scss
@@ -124,7 +124,7 @@ section.row {
     // height: 250px;
     flex-grow: 4;
     flex-shrink: 0;
-    flex-basis: 200px;
+    flex-basis: 250px;
   }
 
   .side-image-content {
